--- a/3_3_navbar.html
+++ b/3_3_navbar.html
@@ -201,7 +201,7 @@
 
 
     <!-- COLORS -->
-     <nav class="navbar navbar-expand-sm navbar-dark bg-dark mb-3">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark mb-3">
         <div class="container">
             <a class="navbar-brand" href="#">Navbar</a>
             <ul class="navbar-nav">
@@ -226,12 +226,24 @@
     <br>
 
     <!-- FIXED TOP -->
+    <!-- <nav class="navbar navbar-dark bg-dark fixed-top">
+        <a href="" class="navbar-brand">Top Fixed Navbar</a>
+    </nav> -->
 
 
     <!-- FIXED BOTTOM -->
+    <nav class="navbar navbar-dark bg-dark fixed-bottom">
+        <a href="" class="navbar-brand">Bottom Fixed Navbar</a>
+    </nav>
 
 
     <!-- FIXED TOP -->
+
+    
+    <!-- STICKY -->
+    <nav class="navbar navbar-dark bg-dark sticky-top">
+        <a href="" class="navbar-brand">Stick Top Fixed Navbar</a>
+    </nav>
 
 
     <br>
@@ -240,38 +252,98 @@
     <div class="container">
 
         <!-- NAVS -->
-        <ul>
-            <li>
-                <a href="#">Link 1</a>
+        <ul class="nav nav-pills">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link 1</a>
             </li>
-            <li>
-                <a href="#">Link 2</a>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link 2</a>
             </li>
-            <li>
-                <a href="#">Link 3</a>
+            <li class="nav-item">
+                <a class="nav-link active" href="#">Link 3</a>
             </li>
-            <li>
-                <a href="#">Link 4</a>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link 4</a>
             </li>
         </ul>
 
 
         <!-- HORIZONTAL ALIGN -->
-
+         <ul class="nav nav-pills justify-content-center">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link 1</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link 2</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" href="#">Link 3</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link 4</a>
+            </li>
+        </ul>
 
         <!-- RIGHT ALIGN -->
+         <ul class="nav nav-pills justify-content-end">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link 1</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link 2</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" href="#">Link 3</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link 4</a>
+            </li>
+        </ul>
+
+
 
 
         <br>
         <br>
 
         <!-- VERTICAL -->
+         <ul class="nav nav-pills flex-column">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link 1</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link 2</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" href="#">Link 3</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link 4</a>
+            </li>
+        </ul>
+
+
 
 
         <br>
         <br>
 
         <!-- FILL & JUSTIFY -->
+          <ul class="nav nav-pills nav-fill">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link 1</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link 2</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" href="#">Link 3</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link 4</a>
+            </li>
+        </ul>
+
 
 
         <br>
