--- a/3_7_alerts_progress.html
+++ b/3_7_alerts_progress.html
@@ -123,8 +123,8 @@
 
 
         <!-- DISMISSABLE ALERT -->
-        <div>
-            <button type="button">
+        <div class="alert alert-success alert-dismissible">
+            <button type="button" class="close" data-dismiss="alert">
                 <span>&times;</span>
             </button>
             <strong>Dismissable</strong> Blog post added
