--- a/3_7_alerts_progress.html
+++ b/3_7_alerts_progress.html
@@ -131,32 +131,32 @@
         </div>
 
         <!-- EXTRA CONTENT -->
-        <div>
-            <h4>Congrats!</h4>
+        <div class="alert alert-success">
+            <h4 class="alert-heading">Congrats!</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit dignissimos eius, sit quo assumenda totam commodi
                 ipsum saepe molestias eligendi exercitationem repudiandae qui facilis deserunt non, harum ab quam? Cumque</p>
             <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, odio?</p>
+            <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, odio?</p>
         </div>
 
         <br>
         <br>
 
         <!-- PROGRESS BARS -->
-        <div>
-            <div></div>
+        <div class="progress">
+            <div class="progress-bar" style="width: 40%;"></div>
         </div>
         <br>
-        <div>
-            <div></div>
+         <div class="progress">
+            <div class="progress-bar" style="width: 40%;">40%</div>
         </div>
         <br>
-        <div>
-            <div></div>
+        <div class="progress">
+            <div class="progress-bar bg-dark" style="width: 40%;"></div>
         </div>
         <br>
-        <div>
-            <div></div>
+        <div class="progress">
+            <div class="progress-bar bg-warning" style="width: 70%;">70%</div>
         </div>
         <br>
         <div>
@@ -164,25 +164,27 @@
         </div>
         <br>
         <!-- HEIGHT -->
-        <div>
-            <div></div>
+        <div class="progress" style="height: 1px;">
+            <div class="progress-bar bg-warning" style="width: 70%;">70%</div>
         </div>
         <br>
         <!-- STRIPED -->
-        <div>
-            <div></div>
+        <div class="progress">
+            <div class="progress-bar bg-warning progress-bar-striped" style="width: 70%;">70%</div>
         </div>
+        <br>
         <br>
         <!-- ANIMATED -->
-        <div>
-            <div></div>
+        <div class="progress">
+            <div class="progress-bar bg-warning progress-bar-striped progress-bar-animated" style="width: 70%;">70%</div>
         </div>
         <br>
+        <br>
         <!-- MULTIPLE BARS -->
-        <div>
-            <div></div>
-            <div></div>
-            <div></div>
+        <div class="progress">
+            <div class="progress-bar bg-warning progress-bar-striped progress-bar-animated" style="width: 33%;">33%</div>
+            <div class="progress-bar bg-primary progress-bar-striped progress-bar-animated" style="width: 35%;">35%</div>
+            <div class="progress-bar bg-success progress-bar-striped progress-bar-animated" style="width: 40%;">40%</div>
         </div>
 
     </div>
